# SerialVsParallel

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  clean.sh  run.sh  setup.sh
Pi/: CMakeLists.txt
Pi/src/: Pi.cpp  Pi.h  main.cpp
docs/: Graph.md  ImageProcessing.md  MatrixMultiplication.md  Pi.md
resources/: Bfs.cl  ImageScaling.cl  MatrixMultiplication.cl  Pi.cl  bfs.cl  primes1e6.tar.xz  setup.py  sssp.cl
scripts/: HelloWorld.cl  ImageScaling.cl  VisualiseExecutionModel.cl
src/: Utility.cpp  Utility.h
src/Graph/: Graph.cpp  Graph.h  main.cpp
src/ImageProcessing/: ImageProcessing.cpp  ImageProcessing.h  main.cpp
src/MatrixMultiplication/: MatrixMultiplication.cpp  MatrixMultiplication.h  main.cpp
src/OpenCLBasics/: main.cpp
src/Pi/: Pi.cpp  Pi.h  main.cpp  mpi_main.cpp
src/Prime/: Prime.cpp  Prime.h  main.cpp
